--- a/Ninesky.Web/Areas/Control/Views/Admin/Index.cshtml
+++ b/Ninesky.Web/Areas/Control/Views/Admin/Index.cshtml
@@ -18,7 +18,9 @@
     @Scripts.Render("~/bundles/bootstrapplugin")
     <script src="~/Scripts/bootstrap-table.js"></script>
     <script src="~/Scripts/bootstrap-table-zh-CN.js"></script>
-<script src="~/Scripts/moment.js"></script>
+    <script src="~/Scripts/bootstrap-dialog.js"></script>
+<script src="~/Scripts/bootstrap-select.js"></script>
+    <script src="~/Scripts/moment.js"></script>
 
     <script type="text/javascript">
         //重置密码
